# ml-pipeline.ai

./: .gitignore  README.md  restart.sh  start.sh  stop.sh
ml-pipeline-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml
ml-pipeline-agent/src/: main.py
ml-pipeline-agent/src/api/: deps.py  routes.py  schemas.py
ml-pipeline-agent/src/config/: llm_providers.py  settings.py
ml-pipeline-agent/src/graph/: builder.py  edges.py
ml-pipeline-agent/src/graph/nodes/: critic.py  data_profiler.py  evaluator.py  feature_engineer.py  model_trainer.py  visualizer.py
ml-pipeline-agent/src/llm/: anthropic_provider.py  base.py  openai_provider.py  prompts.py
ml-pipeline-agent/src/pipeline/: artifacts.py  executor.py
ml-pipeline-agent/src/sandbox/: base.py  subprocess_sandbox.py  validators.py
ml-pipeline-agent/src/state/: schema.py
ml-pipeline-agent/src/utils/: errors.py  logging.py
ml-pipeline-agent/tests/: conftest.py
ml-pipeline-agent/tests/unit/: test_sandbox.py  test_state_schema.py
ml-pipeline-ui/: .gitignore  Dockerfile  Dockerfile.dev  next.config.ts  package.json  tailwind.config.ts
ml-pipeline-ui/src/app/: globals.css  layout.tsx  page.tsx
ml-pipeline-ui/src/components/layout/: GraphModal.tsx  Navbar.tsx  ThemeToggle.tsx
ml-pipeline-ui/src/components/pipeline/: PhaseTimeline.tsx  PipelineControls.tsx  PipelineGraph.tsx  StatusBadge.tsx  TokenCounter.tsx
ml-pipeline-ui/src/components/results/: DataProfilePanel.tsx  EvaluationPanel.tsx  (+6 more)
ml-pipeline-ui/src/hooks/: usePipeline.ts
ml-pipeline-ui/src/lib/: api.ts  types.ts
