[project]
name = "ml-pipeline-agent"
version = "0.1.0"
description = "LangGraph-based autonomous ML pipeline"
requires-python = ">=3.12"
authors = [{ name = "JB" }]

dependencies = [
    # LangGraph orchestration
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite>=0.20.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",

    # LLM SDKs (direct access for provider abstraction)
    "anthropic>=0.40.0",
    "openai>=1.50.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Data & ML
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "optuna>=4.0.0",

    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",

    # Observability
    "langsmith>=0.2.0",
    "structlog>=24.4.0",

    # Storage
    "boto3>=1.35.0",
    "aiofiles>=24.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
